pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: samplemdbejbear
  name: samplemdbejbear
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: samplemdbejbear
    weight: 100
